--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "content": "CC­BY­NC­SA 4.0"
   },
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "jquery": "^3.3.1"
   },
   "devDependencies": {
